--- a/Project/Client/Views/Shared/_Layout.cshtml
+++ b/Project/Client/Views/Shared/_Layout.cshtml
@@ -142,7 +142,10 @@
                                     <a class="navelement" asp-controller="User" asp-action="Information">Information & Password</a>
                                     <a class="navelement" asp-controller="Product" asp-action="Collection">Wishlist & Library</a>
                                     <a class="navelement" asp-controller="User" asp-action="Cart">Cart</a>
-
+                                    @if (User.IsInRole("Admin"))
+                                    {
+                                        <a class="navelement" asp-controller="Admin" asp-action="AdminDashboard">Admin Dashboard</a>
+                                    }
                                     @* <a class="navelement" asp-controller="Order" asp-action="History">History</a> *@
 @*                                     <a class="navelement" asp-controller="User" asp-action="ChangePassword">ChangePassword</a>
                                     <a class="navelement" asp-controller="Product" asp-action="ProductDetail">ProductDetail</a></>
