update free payment

--- a/Project/Client/Views/Order/PaymentSuccess.cshtml
+++ b/Project/Client/Views/Order/PaymentSuccess.cshtml
@@ -15,13 +15,17 @@
             {
                 <strong>Payment Method: MoMo</strong>
             }
-            else
+            else if (Model.OrderType.Contains("payos"))
             {
                 <strong>Payment Method: Pay OS</strong>
             }
+            else
+            {
+                <strong>Payment Method: Free</strong>
+            }
         </p>
         
-        <p title="UTC time: @Model.ResponseUtcDateTime"><strong>Order Date:</strong>@Model.ResponseLocalDateTime</p>
+        <p title="UTC Datetime: @Model.ResponseUtcDateTime"><strong>Local Datetime:</strong>@Model.ResponseLocalDateTime</p>
         <p><strong>Total Price:</strong> @string.Format("{0:N0}", Model.Amount) vnđ</p>
 
     </div>
