--- a/Project/Client/Views/User/Cart.cshtml
+++ b/Project/Client/Views/User/Cart.cshtml
@@ -72,16 +72,23 @@
                     } *@
                     @if (Model.Order != null)
                     {
-                        @if (Model.Order.Items != null){
-                            <div class="fw-bold">ORDER TOTA
-                                L: @Model.Order.TotalPrice.ToString("N0") vnđ</div>
+                        @if (Model.Order.Items != null)
+                        {
+                            <div class="fw-bold">
+                                ORDER TOTA
+                                L: @Model.Order.TotalPrice.ToString("N0") vnđ
+                            </div>
                         }
                     }
-                    </div>
                 </div>
             </div>
-            <!-- Your Payment & Gifting Details Section -->
-            <div class="col-lg-5">
+        </div>
+        <!-- Your Payment & Gifting Details Section -->
+        <div class="col-lg-5">
+
+            @if (Model.Order.TotalPrice != 0)
+            {
+
                 <h5 class="fw-bold"><i class="fas fa-user"></i>YOUR PAYMENT & GIFTING DETAILS</h5>
 
                 <div class="custom-bg-light p-3 mt-3 shadow-sm border">
@@ -129,9 +136,25 @@
                     </div>
                 </div>
 
-                <div class="custom-bg-light p-3 mt-3 shadow-sm border">
-                    <!-- Total and Google Pay Button -->
-                    <div class="d-flex align-items-center justify-content-between">
+            }
+            else
+            {
+                <h5 class="fw-bold"><i class="fas fa-user"></i>YOUR PAYMENT & GIFTING DETAILS</h5>
+                <div class="custom-bg-light p-3 shadow-sm border">
+                    <!-- Free Payment Method -->
+                    <div class="form-check text-secondary d-flex align-items-center">
+                        <input asp-for="@Model.PaymentMethod" value="Free" type="radio" id="free" name="PaymentMethod" class="form-check-input">
+                        <label for="payos" class="form-check-label d-flex align-items-center">
+                            <img src="~/image/freeicon.png" alt="free icon" class="mx-3 payment-icon me-2" />
+                            FREE
+                        </label>
+                    </div>
+                </div>
+            }
+
+            <div class="custom-bg-light p-3 mt-3 shadow-sm border">
+                <!-- Total and Google Pay Button -->
+                <div class="d-flex align-items-center justify-content-between">
                     @if (Model.Order != null)
                     {
                         @if (Model.Order.Items != null)
@@ -140,23 +163,23 @@
                             <h4>@Model.Order.TotalPrice.ToString("N0") vnđ</h4>
                         }
                     }
-                        <button type="submit" class="btn btn-dark px-3 py-2 rounded-3" style="width: 200px;">
-                            Pay
-                        </button>
-                    </div>
+                    <button type="submit" class="btn btn-dark px-3 py-2 rounded-3" style="width: 200px;">
+                        Pay
+                    </button>
                 </div>
             </div>
-        </form>
-    </div>
+        </div>
+    </form>
+</div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-                        @section Scripts {
-                        @{
-                                await Html.RenderPartialAsync("_ValidationScriptsPartial");
-                            }
-                        }
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
 
-                        @* <script>
+@* <script>
     $(document).ready(function () {
         $('#checkoutForm').on('submit', function (e) {
             e.preventDefault(); // Ngăn form submit theo cách thông thường
