--- a/Project/Client/Views/Admin/CreateProduct.cshtml
+++ b/Project/Client/Views/Admin/CreateProduct.cshtml
@@ -113,7 +113,7 @@
     <!-- Game File (Upload game file) -->
     <div class="form-group">
         <label class="control-label" asp-for="@Model.gameFile">Upload Game File</label>
-        <input type="file" name="gameFile" multiple class="form-control" asp-for="@Model.gameFile" />
+        <input type="file" name="gameFile" class="form-control" asp-for="@Model.gameFile" />
         <span asp-validation-for="@Model.gameFile" class="text-danger"></span>
     </div>
 
