--- a/Project/Client/Views/Shared/_Layout.cshtml
+++ b/Project/Client/Views/Shared/_Layout.cshtml
@@ -21,7 +21,18 @@
     @* Owl.Theme.default.min.css *@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
-        
+        canvas {
+            background: #d4f1f4;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        }
+
+        #score {
+            position: absolute;
+            top: 20px;
+            font-size: 20px;
+            font-weight: bold;
+            color: #444;
+        }
     </style>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -75,7 +86,7 @@
                                 </a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link btn fw-bold" id="navbarDropdown2" role="button">
+                                <a class="nav-link btn fw-bold" id="navbarDropdown2" role="button" asp-action="Play" asp-controller="Home">
                                     Play
                                 </a>
                             </li>
